2026-02-08	web: fix fuzzy 100% zoom by using exact DPR backing
2026-02-08	agents: require auto-push after each local commit
2026-02-08	web: refine canvas scale mapping for sharper 100% text
2026-02-08	Fix fuzzy rendering: use 1:1 pixel resolution, no DPR scaling
2026-02-08	Remove stale configureCanvas() call in renderBatch
2026-02-08	Fix stale logicalWidth/Height reference in CLEAR_BG opcode
2026-02-08	Remove last stale DPR references (deviceScaleX/Y in text rendering)
2026-02-08	Route text rendering to DPR-scaled overlay canvas for smooth anti-aliased text
2026-02-08	Fix text overlay alignment and DPR-scale game canvas for crisp rendering
2026-02-08	Remove text overlay, render everything on DPR-scaled game canvas
2026-02-08	Add candy theme sprites and runtime theme toggle
2026-02-08	Fix theme toggle by wiring click handler from loader.js
2026-02-08	Improve outlet/vent bottleneck warning visibility
2026-02-08	Prevent locked shop pages from hiding tab UI
2026-02-08	Render outlet bottleneck warnings on outlet components
2026-02-08	Scope outlet warning icons and text to affected outlets
2026-02-08	Base outlet warnings on adjacent vent capacity
2026-02-08	Clarify outlet warning description text
2026-02-08	Regenerate all 185 candy sprites with transparency and themed UI
2026-02-08	Regenerate all candy sprites with pro model for crisp pixel art
2026-02-08	Replace candy theme with decayed/abandoned theme
2026-02-08	Regenerate decayed sprites preserving original colors
2026-02-08	Fix decayed button hover/pressed sprites appearing to shrink
2026-02-08	Fix decayed grid tiles being 4x too large
2026-02-08	Use single-outlet rate for warning indicator checks
2026-02-08	Keep web simulation ticking in hidden tabs
2026-02-08	Use fixed hidden-tab dt to avoid catch-up bursts
2026-02-08	Fix decayed sprite alpha holes and darken unpurchasable items
2026-02-08	Preserve drag build/sell across canvas exit
2026-02-08	Add changelog.txt as source of truth and render site changelog from it